added animated gif to readme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
       form {
           border: 1px solid black;
-          max-width: 30rem;
+          max-width: 34rem;
           margin: 1rem 0;
           padding: 0.5rem;
       }
@@ -22,7 +22,7 @@
   validates them accordingly.</p>
 
 <form id="formtime">
-  <label for="timeinput">Time input (min 09:30, max: 14:00):</label>
+  <label for="timeinput">input type="time" min="09:30" max="14:00" :</label>
   <input id="timeinput"
          type="time"
          min="09:30"
@@ -32,7 +32,7 @@
   <button type="submit">Submit</button>
 </form>
 <form id="formtext">
-  <label for="degraded">Text input (min 09:30, max: 14:00):</label>
+  <label for="degraded">input type="text" min="09:30" max="14:00" :</label>
   <input id="degraded"
          type="text"
          min="09:30"
